; ModuleID = '/home/carl/AnghaBench/twemproxy/src/extr_nc_array.c_array_sort.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/extr_nc_array.c_array_sort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.array = type { i64, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @array_sort(%struct.array* %0, i32 %1) #0 {
  %3 = alloca %struct.array*, align 8
  %4 = alloca i32, align 4
  store %struct.array* %0, %struct.array** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.array*, %struct.array** %3, align 8
  %6 = getelementptr inbounds %struct.array, %struct.array* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  %9 = zext i1 %8 to i32
  %10 = call i32 @ASSERT(i32 %9)
  %11 = load %struct.array*, %struct.array** %3, align 8
  %12 = getelementptr inbounds %struct.array, %struct.array* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.array*, %struct.array** %3, align 8
  %15 = getelementptr inbounds %struct.array, %struct.array* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.array*, %struct.array** %3, align 8
  %18 = getelementptr inbounds %struct.array, %struct.array* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @qsort(i32 %13, i64 %16, i32 %19, i32 %20)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @qsort(i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
